Archive2/41/2e8f26ddddcbb3/output
main.cpp:17:14: error: duplicate case value: 'VAL_A' and 'VAL_B' both equal '1'
        case VAL_B:
             ^
main.cpp:14:14: note: previous case defined here
        case VAL_A:
             ^
main.cpp:25:48: warning: suggest braces around initialization of subobject [-Wmissing-braces]
    const std::array<const int, VAL_B> arr = { 1 };
                                               ^
                                               {}
1 warning and 1 error generated.
